Prepare charts for global values (#92)
