# charts/grafana-operator/values.openapiv3_schema.yaml
@@ -751,65 +751,20 @@ properties:
     type: object
   apiserver:
     properties:
-      bypassValidatingWebhookXray:
-        type: boolean
-      ca:
-        type: string
-      enableMutatingWebhook:
-        type: boolean
-      enableValidatingWebhook:
-        type: boolean
-      groupPriorityMinimum:
-        format: int32
-        type: integer
       healthcheck:
         properties:
           enabled:
             type: boolean
-        type: object
-      servingCerts:
-        properties:
-          caCrt:
-            type: string
-          generate:
-            type: boolean
-          serverCrt:
-            type: string
-          serverKey:
-            type: string
+          probePort:
+            type: integer
         required:
-        - generate
+        - probePort
         type: object
       useKubeapiserverFqdnForAks:
         type: boolean
-      versionPriority:
-        format: int32
-        type: integer
     required:
-    - ca
-    - enableMutatingWebhook
-    - enableValidatingWebhook
-    - groupPriorityMinimum
     - healthcheck
-    - servingCerts
     - useKubeapiserverFqdnForAks
-    - versionPriority
-    type: object
-  cleaner:
-    properties:
-      registry:
-        type: string
-      repository:
-        type: string
-      skip:
-        type: boolean
-      tag:
-        type: string
-    required:
-    - registry
-    - repository
-    - skip
-    - tag
     type: object
   criticalAddon:
     type: boolean
@@ -827,7 +782,13 @@ properties:
   monitoring:
     properties:
       agent:
+        enum:
+        - prometheus.io
+        - prometheus.io/operator
+        - prometheus.io/builtin
         type: string
+      bindPort:
+        type: integer
       serviceMonitor:
         properties:
           labels:
@@ -837,6 +798,7 @@ properties:
         type: object
     required:
     - agent
+    - bindPort
     - serviceMonitor
     type: object
   nameOverride:
@@ -1149,6 +1111,8 @@ properties:
             type: string
         type: object
     type: object
+  registryFQDN:
+    type: string
   replicaCount:
     format: int32
     type: integer
@@ -1204,10 +1168,10 @@ properties:
     type: array
 required:
 - apiserver
-- cleaner
 - imagePullPolicy
 - monitoring
 - operator
+- registryFQDN
 - replicaCount
 - serviceAccount
 type: object
